#157: made input type=range 5px smaller to avoid triggering the scrollbar

--- a/admin-base/materialize/materialize-src/sass/components/forms/_range.scss
+++ b/admin-base/materialize/materialize-src/sass/components/forms/_range.scss
@@ -16,7 +16,7 @@ input[type=range] {
   background-color: transparent;
   border: none;
   outline: none;
-  width: 100%;
+  width: calc(100% - 5px);
   margin: 15px 0;
   padding: 0;
 
